--- a/VRChat/55/1034955.html
+++ b/VRChat/55/1034955.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "enceIW7+naOJ3tWFv513y72vRpOKj8wlKoCoeudZC6U="></script>
+    "htlEaS0KAVb40om72+CQObyTYdEUBkz+AEMaoh1QJiI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「豚の鼻」","description":"3Dモデル「豚の鼻」\nありそうでなかった「豚の鼻」\nVRChatでの使用を想定して作りました。\nほかの用途で使用してもＯＫです。\n\n自分に着けてもよし！\nカワイイあの子に着けてもよし！\nアクセサリーにしてもよし！\n遊び方無限大！\n\n更にポリゴン数と鼻の形が違う６種類が同梱！\nシェイプキーも３種類ついてます。\n用途に合わせて使い分けよう！","url":"https://booth.pm/ja/items/1034955","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/6fafd09f-818a-4190-9bd5-a575b372774f/i/1034955/64c7621a-8bc4-4ba9-b38b-0c8195e1a432_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="enceIW7+naOJ3tWFv513y72vRpOKj8wlKoCoeudZC6U="></script>
+    nonce="htlEaS0KAVb40om72+CQObyTYdEUBkz+AEMaoh1QJiI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1034955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1034955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
