--- a/VRChat/33/1034833.html
+++ b/VRChat/33/1034833.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ubedyiaoYkjN8rKV/RbfNjhW15T3qggO9sZrnaVjJqM="></script>
+    "S5Cyxpe06js4M8aSMnN59IZExxqK4X/gdx5T9orBuK8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Panzerschreck Ammo bag","description":"\n本製品は、VRChat向け、fbx形式の3D武器モデルです。\n\n※「Panzerschreck Ammo bag　支援物資」100円ですが\n中身は無料版と変わりはございません。\nブースト用となります。\n\n\n▼製品内容\nreadme\nFBXファイル\nテクスチャファイル\n\n▼本体説明\n「Ykr-Armament.co」が製作する武器、装備品、イメージ品のモデルとなっております。\n民間用モデルですが、軍事用として、改造も可能です。\n\nPanzerschreck(パンツァーシュレック)という\n第二次世界大戦でドイツ軍が使用した対戦車ロケットランチャーの\n弾薬を運ぶときに使用されていたような形のバックと弾薬です。\n\nポリゴン数：3875\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n","url":"https://booth.pm/ja/items/1034833","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1034833/2d9a8156-7d67-4ed5-a4f9-39d624d7d165_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ubedyiaoYkjN8rKV/RbfNjhW15T3qggO9sZrnaVjJqM="></script>
+    nonce="S5Cyxpe06js4M8aSMnN59IZExxqK4X/gdx5T9orBuK8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1034833/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1034833/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
