--- a/VRChat/13/1034513.html
+++ b/VRChat/13/1034513.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IO8IhYsQbhLxXrdCP1DVwKdpzOe+yE0rrj25w+PGaCQ="></script>
+    "WY+qiQESsBjri1cwsByKa0cpqbdnHMQpCpCZgkmQAOQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"飛行帽","description":"永遠のお洒落アイテム「飛行帽」です！\nポリゴン数は2896。耳の部分が巻いてある方は3016となっております。テクスチャーは共有しております。\n\n内容：FBXファイル2種。テクスチャー画像1種。\n\n※本モデル及びデータを使用するに関して\n・基本的にVRchatでの利用を考えて制作しております。\n・UnityやVRchatへの導入方法はご理解頂けてる前提での販売となっております。\n（導入方法をご存知でない方は申し訳ありませんが検索をかける等ご自身で調べてください。）\n・著作権は改変、未改変にかかわらず製作者「o-zora」に帰属します。\n・本モデル、データを利用によるいかなる損害に対する責任も製作者「o-zora」は責任を負いません。\n\n※OKなこと。許可項目。\n・モデル及びデータの改変。\n（他のモデルと組み合わせる場合はこちらからはOKです。組み合わせ先の規約をよくご確認ください。）\n・個人、サークル等によるゲームでの利用や動画などでの利用。及びそれらによる収益化。\n（法人の方は要相談）（また可能であれば動画等での利用の際クレジット表記してくれるとありがたいです）\n\n※ダメなこと。不可項目。\n・再配布、二次配布の禁止。改変後も不可。\n・元のモデルの自作発言を禁止します。\n・VRChatのアバターペデスタルでの利用は禁止します。\n・政治的活動、宗教活動、特定個人や団体への中傷を目的とした利用を禁止します。\n\n不明なこと、不具合、質問等ございましたら気軽にツイッターへご連絡ください。\nただ、Unity、Blender等の技術的な質問にはお答えしかねます。\n@analognihonnhei\n","url":"https://booth.pm/ja/items/1034513","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/173e5138-c18a-442d-a811-70459b0503fd/i/1034513/8f057807-2652-4775-97b8-f978d1003e59_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IO8IhYsQbhLxXrdCP1DVwKdpzOe+yE0rrj25w+PGaCQ="></script>
+    nonce="WY+qiQESsBjri1cwsByKa0cpqbdnHMQpCpCZgkmQAOQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1034513/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1034513/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
