--- a/VRChat/79/1033479.html
+++ b/VRChat/79/1033479.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FiVaBmboj1xm3dWx2A54nCpGWDeMyH7qFCdxa0/VWbg="></script>
+    "4HhB8J5Gla6J+/19ZKEg+vBDLZqBA9o6GtoH3/cnUp0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【武器】簡潔銃剣トラッキングソードガン【ローポリ】","description":"剣型ゲームコントローラ風ややローポリゴン3Dモデル「簡潔刀剣トラッキングソード」\n拳銃型ゲームコントローラ風ややローポリゴン3Dモデル「簡潔拳銃トラッキングマグナム」\n上記2種の3Dモデルのセット「簡潔銃剣トラッキングソードガン」です。\nVRChat等の自作3Dモデルを使用可能なゲームでご利用いただけます。\n完全自作のゲーム等でご利用いただけます。\nバーチャルYouTuber等の配信者のアバター等にご利用いただけます。\n3Dモデルデータおよび画像データは自由に改変してご利用いただけます。\n\nダウンロードしたファイル「tracking_sword_magnum.zip」には以下のデータが含まれます。\n・tracking_magnum.fbx\n　→拳銃型3Dモデルのデータです。ポリゴン数は△286です。\n・tracking_magnum_texture.png\n　→tracking_magnum.fbxのテクスチャとなる画像データです。\n・tracking_magnum_uvmap.png\n　→tracking_magnum.fbxのUV配置を示した画像データです。\n・tracking_sword.fbx\n　→剣型3Dモデルのデータです。ポリゴン数は△188です。\n・tracking_sword_texture.png\n　→tracking_sword.fbxのテクスチャとなる画像データです。\n・tracking_sword_uvmap.png\n　→tracking_sword.fbxのUV配置を示した画像データです。\n\nこのデータの内容を予告なく変更する場合があります。\nこのデータの配布を予告なく中止する場合があります。\nこのデータの再配布を禁止します。\nこのデータの再販売を禁止します。\n0hmoriは、このデータを使用して生じたいかなる損害等について、一切責任を負いません。","url":"https://booth.pm/ja/items/1033479","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8cb4421e-f2e1-45d8-add4-b0798304ddd9/i/1033479/6890e18e-5deb-4323-be31-3533bf994e1e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FiVaBmboj1xm3dWx2A54nCpGWDeMyH7qFCdxa0/VWbg="></script>
+    nonce="4HhB8J5Gla6J+/19ZKEg+vBDLZqBA9o6GtoH3/cnUp0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1033479/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1033479/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
